--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -9,9 +9,10 @@
     <!-- Judul -->
     <TextView
         android:id="@+id/tvTema"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Tema Aplikasi"
+        android:text="Application Theme"
+        android:padding="5dp"
         android:textSize="28sp"
         android:textStyle="bold"
         android:gravity="center"
@@ -21,25 +22,26 @@
         android:layout_marginTop="40dp" />
 
     <!-- Tombol Mode Terang -->
+
+    <!-- Tombol Mode Gelap -->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnLightMode"
         android:layout_width="0dp"
         android:layout_height="60dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/lightmode_button"
         android:text="Mode Terang"
         android:textColor="@color/black"
-        android:background="@drawable/lightmode_button"
         app:backgroundTint="@null"
         app:cornerRadius="24dp"
         app:icon="@drawable/lightmodeicon"
         app:iconSize="24dp"
         app:iconTint="@color/black"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="12dp"
-        app:layout_constraintTop_toBottomOf="@id/tvTema"
+        app:layout_constraintEnd_toStartOf="@id/btnDarkMode"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/btnDarkMode" />
+        app:layout_constraintTop_toBottomOf="@id/tvTema" />
 
-    <!-- Tombol Mode Gelap -->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnDarkMode"
         android:layout_width="0dp"
@@ -52,8 +54,8 @@
         app:icon="@drawable/darkmodeicon"
         app:iconSize="24dp"
         app:iconTint="@color/white"
-        android:layout_marginTop="40dp"
-        android:layout_marginStart="12dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="10dp"
         app:strokeColor="@color/white"
         app:strokeWidth="2dp"
         app:layout_constraintTop_toBottomOf="@id/tvTema"
