--- a/app/src/main/res/layout/fragment_first_page.xml
+++ b/app/src/main/res/layout/fragment_first_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="32dp"
+    android:padding="20dp"
     android:background="#FFFFFF"
     tools:context=".onboarding.pages.FirstPage">
 
@@ -14,7 +14,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="32dp"
-        android:background="#F8FAFF"
+        android:background="@drawable/viewpager_icon_bg"
         android:scaleType="fitCenter"
         android:src="@drawable/apkicon"
         android:padding="28dp"
@@ -64,19 +64,20 @@
         android:layout_height="56dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="32dp"
-        app:backgroundTint="#1B5E20"
+        android:layout_marginBottom="84dp"
         android:gravity="center"
+        android:letterSpacing="0.02"
+        android:paddingStart="24dp"
+        android:paddingEnd="24dp"
         android:text="Jelajahi Game"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:letterSpacing="0.02"
-        android:paddingStart="24dp"
-        android:paddingEnd="24dp"
+        app:backgroundTint="#1B5E20"
         app:cornerRadius="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <LinearLayout
