--- a/app/src/main/res/layout/fragment_second_page.xml
+++ b/app/src/main/res/layout/fragment_second_page.xml
@@ -29,7 +29,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="32dp"
-        android:background="#F8FAFF"
+        android:background="@drawable/viewpager_icon_bg"
         android:scaleType="fitCenter"
         android:src="@drawable/apkicon"
         android:padding="20dp"
@@ -64,18 +64,19 @@
         android:layout_height="56dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="32dp"
-        app:backgroundTint="#1B5E20"
+        android:layout_marginBottom="72dp"
+        android:letterSpacing="0.02"
+        android:paddingStart="24dp"
+        android:paddingEnd="24dp"
         android:text="Lihat Fitur Lainnya"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:letterSpacing="0.02"
-        android:paddingStart="24dp"
-        android:paddingEnd="24dp"
+        app:backgroundTint="#1B5E20"
         app:cornerRadius="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <LinearLayout
